"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2014-01-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-05:
	  Implemented hierarchical atomic cyclic dependency checker,
		using transitive_closure and strongly_connected_components.
		No extra information writte to footprint object binary,
		information is reconstructed on the fly.


2013-12-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-04:
	  Allow spec invariants to take $$(atomic expressions).
		Also implemented in hacprsim.
	  hacprsim: save-and-restore updated invariant list around
		set-immediate-node (re-entrant).


2013-11-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-03:
	  Allow ebool declarations to implicitly attach attribute atomic.


2013-11-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-02:
	  Implemented why-analysis on atomic-nodes.
	  Querying why an atomic node is X is the same as querying
		why-not ~X, due to combinational behavior of atomics.  
	  previous commits: got atomic node update propagation working.
		Also able to print atomic updates with watch/watchall.


2013-10-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-01:
	  footprint: language body pointers (PRS/CHP/RTE/SPEC) are now
		only allocated on-first-use by the middle-end.
		Binary object format updated to v.11.


2013-06-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53:
	  vpi-prsim.cc: fix inconsistency where __advance_prsim failed
		to fast-forward prsim time in cases where no events
		are pending, or next event is beyond the advance time.


2013-04-01	David Fang		<fangism@users.sourceforge.net>
