@@ -1,0 +1,12 @@
+globID	super		localID	canonical	footprint-frame
+[global process entries]
+1	(top)	-	1	SRC	bool_source<>
+	bool: 1,2,3,4
+2	(top)	-	2	SNK	bool_sink<>
+	bool: 1,2,4,3
+[global bool entries]
+1	(top)	-	1	!GND	 @[ supply_low ]
+2	(top)	-	2	!Vdd	 @[ supply_high ]
+3	(top)	-	3	lack	
+4	(top)	-	4	lreq	
+
